recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:4: error: not found: value rigth
    rigth(90)
    ^FourSquare:6: error: not found: value rigth
    rigth(90)
    ^FourSquare:8: error: not found: value rigth
    rigth(90)
    ^FourSquare:10: error: not found: value rigth
    rigth(90)
    ^FourSquare:13: error: too many arguments for method square: ()Unit
  square(0)
        ^