recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  def square(){
    forward(100)
    rigth(90)
    forward(100)
    rigth(90)
    forward(100)
    rigth(90)
    forward(100)
    rigth(90)
  }

  square(0)
}